# Finalyearproj

./: .replit  app.py  app_starter.py  forms.py  github_url_processor.py  kg_processor.py  main.py  models.py  neo4j_manager.py  process_github_url.py  pyproject.toml  requirements.txt  routes.py  temp_relationship.html  test_db.py  whisper_transcriber.py
attached_assets/: Pasted--coding-utf-8-Untitled12-ipynb-Automatically-generated-by-Colab-Original-file-i-1746364285778.txt  Pasted-movieId-released-title-actors-director-genres-imdbRating-1-1995-11-22-Toy-Story-Jim-Varney-Tim-Alle-1746365040399.txt
data/triples/: graph_12.csv  graph_21.csv  graph_3.csv  graph_4.csv  graph_5.csv  graph_6.csv  graph_7.csv
kg_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/css/: custom.css  neo4j-network.css
static/js/: graph_viz.js  main.js
templates/: analytics.html  analytics_dark.html  analytics_new.html  base.html  dashboard.html  db_unavailable.html  error.html  github_url_only.html  github_url_process.html  index.html  login.html  new_graph.html  process.html  profile.html  query.html  register.html  video_summary.html  visualization.html
uploads/4a78d9e4-b88a-485a-a7a1-7c02c6b78e28/: preview_triples.json  summary_metadata.json  transcription.txt  youtube_url.txt
uploads/560a308d-7603-40bb-852d-5c41950b926d/: preview_triples.json
uploads/67018709-a902-4dea-85c6-87552e406a46/: preview_triples.json  youtube_url.txt
uploads/9325ab3c-4a26-4911-94f8-71abc903e653/: summary_metadata.json
uploads/97469c54-784e-4405-87ac-38dc4344c174/: preview_triples.json  (+2 more)
(+6 files in other folders)
