[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-builder"
version = "0.1.0"
authors = [
    {name = "Developer"}
]
description = "Knowledge Graph Builder"
requires-python = ">=3.7"
dependencies = [
    "flask",
    "flask-login",
    "flask-sqlalchemy",
    "flask-wtf",
    "email-validator",
    "gunicorn",
    "psycopg2-binary",
    "werkzeug",
    "pandas",
    "openai-whisper>=20230306",
    "pytube>=15.0.0",
    "openai>=0.8.0",
    "groq>=0.11.0",
]

[tool.setuptools]
packages = []
